# aiofauna-examples-sandbox

./: .gitignore  Dockerfile  README.md  deployment.yaml  main.py  pyproject.toml  requirements.txt  setup.sh
.github/: init.md  pr.md  push.md
kubectl/: client.py  config.py  decorators.py  handlers.py  helpers.py  metrics.py  models.py  payload.py  utils.py
scripts/: deploy.py  newdeploy.sh
templates/: Request.vue.j2  deploy.sh.j2  index.html  nginx.conf  settings.json
