[tool.poetry]
name = "kubectl"
version = "0.0.1"
description = ""
authors = ["Oscar Bahamonde <oscar.bahamonde@sakai-dev.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aioredis = "^2.0.1"
aiofauna = "^0.0.38"
aioboto3 = "^11.1.0"
psutil = "^5.9.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
